# raytracer

./: .gitignore  README.md
raytracer/raytracer/: App.cpp  CMakeLists.txt  Makefile  angle.cpp  app.cpp  command-line-parser.cpp  command-line-parser.h  command-line-processor.cpp  command-line-processor.h  easylogging++.h  logging.cpp  logging.h  post-debug.rb  post-release.rb  prebuild.rb  raytracer.vcxproj  raytracer.vcxproj.filters  s-expression.cpp  version.h
raytracer/raytracer/animation/: animation-inverter.h  animation-limiter.h  animation-looper.h  animation-sequence.h  animation.cpp  animation.h  animations.h  circular-animation.cpp  circular-animation.h  duration.cpp  duration.h  ease-animation.h  interval-animation.h  lissajous.cpp  lissajous.h  redimensioner.h  time-stamp.cpp  time-stamp.h
raytracer/raytracer/bitmap-consumers/: bitmap-consumer.h  bitmap-consumers.h  motion-blur-consumer.cpp  motion-blur-consumer.h  ppm-bitmap-consumer.cpp  ppm-bitmap-consumer.h  wif-bitmap-consumer.cpp  wif-bitmap-consumer.h
raytracer/raytracer/cameras/: Camera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  camera.cpp  camera.h  cameras.cpp  cameras.h  depth-of-field-perspective-camera.cpp  depth-of-field-perspective-camera.h  displaceable-camera.cpp  displaceable-camera.h  fisheye-camera.cpp  fisheye-camera.h  orthographic-camera.cpp  orthographic-camera.h  perspective-camera.cpp  perspective-camera.h
raytracer/raytracer/chai/: cameras-module.cpp  imaging-module.cpp  imaging-module.h  lights-module.cpp  lights-module.h  materials-module.cpp  math-module.cpp  primitives-module.cpp  primitives-module.h  raytracing-module.cpp  raytracing-module.h  rendering-module.cpp  rendering-module.h  scripting.cpp  scripting.h
raytracer/raytracer/data-structures/: grid.h  position.h
raytracer/raytracer/demo/: bumpifier-demo.cpp  bumpifier-demo.h  demo.cpp  demo.h  demos.cpp  demos.h  depth-of-field-demo.cpp  depth-of-field-demo.h  design-example.cpp  design-example.h  fisheye-demo.cpp  fisheye-demo.h  marble-animation-demo.cpp  marble-animation-demo.h  mesh-demo.cpp  mesh-demo.h  plane-bumpifier-demo.cpp  sampler-demo.cpp  sampler-demo.h  sphere-bumpifier-demo.cpp  split-depth-demo.cpp  split-depth-demo.h  terrain-demo.cpp  terrain-demo.h
raytracer/raytracer/demos/: cartoon-renderer-demo.cpp  cartoon-renderer-demo.h  dalmatian-demo.cpp  dalmatian-demo.h  demo.cpp  demo.h  demos.h  depth-of-field-demo.cpp  design-example.cpp  fisheye-demo.cpp  marble-animation-demo.cpp  mesh-demo.cpp  plane-bumpifier-demo.cpp  plane-bumpifier-demo.h  sampler-demo.cpp  sphere-bumpifier-demo.cpp  sphere-bumpifier-demo.h  split-depth-demo.cpp  terrain-demo.cpp
raytracer/raytracer/imaging/: bitmap-function.cpp  bitmap-function.h  bitmap.cpp  bitmap.h  bmp-format.cpp  bmp-format.h  bmp_format.cpp  color-mapper.cpp  color-mapper.h  color.cpp  color.h  formats.cpp  formats.h  image-reader.h  ppm-format.cpp  ppm-format.h  wif-format.cpp  wif-format.h  wif_format.cpp  wif_format.h
raytracer/raytracer/io/: binary-reader.h  file-binary-reader.cpp  file-binary-reader.h
raytracer/raytracer/lights/: anisotropic-light.cpp  anisotropic-light.h  area-light.cpp  area-light.h  cone-light.cpp  cone-light.h  conical-light.cpp  conical-light.h  directional-light.cpp  directional-light.h  light-ray.cpp  light-ray.h  light-source.h  lights.h  omnidirectional-point-light.cpp  omnidirectional-point-light.h  point-light.cpp  point-light.h  spot-light.cpp  spot-light.h
raytracer/raytracer/loopers/: looper.cpp  looper.h  loopers.h  multithreaded-looper.cpp  multithreaded-looper.h  single-threaded-looper.cpp  single-threaded-looper.h  smart-looper.cpp  smart-looper.h
raytracer/raytracer/materials/: CheckeredMaterial.cpp  CheckeredMaterial.h  Material3D.h  UniformMaterial.cpp  UniformMaterial.h  brdf.h  checkered-material.cpp  checkered-material.h  composition-material.cpp  composition-material.h  marble-material.cpp  marble-material.h  material-properties.cpp  material-properties.h  material-transformer.cpp  material-transformer.h  material.cpp  material.h  material2d.h  material3d.h  materials.cpp  materials.h  pattern-material.cpp  pattern-material.h  pattern-materials.cpp  pattern-materials.h  perlin-material.cpp  perlin-material.h  texture-material.cpp  texture-material.h  uniform-material.cpp  uniform-material.h  wood-material.cpp  wood-material.h  worley-material.cpp  worley-material.h
raytracer/raytracer/math/: angle.cpp  angle.h  approx.h  box.cpp  box.h  coordinate-systems.h  function.h  functions.h  interval-mapper.cpp  interval-mapper.h  interval.cpp  interval.h  interval_mapper.cpp  interval_mapper.h  math-plane.cpp  matrix.cpp  matrix.h  matrix4d.cpp  matrix4d.h  misc.h  noise.h  noise2d.h  noise3d.h  point.h  point2d.cpp  point2d.h  point3d.cpp  point3d.h  quadratic_equation.cpp  quadratic_equation.h  quaternion.cpp  quaternion.h  rasteriser.cpp  rasteriser.h  rasterizer.cpp  rasterizer.h  ray.cpp  ray.h  rectangle.cpp  rectangle.h  (+24 more)
raytracer/raytracer/meta/: function-traits.h  indexing.h
raytracer/raytracer/patterns/: checkered-pattern.cpp  checkered-pattern.h  constant-pattern.cpp  constant-pattern.h  dalmatian-pattern.cpp  dalmatian-pattern.h  flower-pattern.cpp  flower-pattern.h  grid-pattern.cpp  grid-pattern.h  lambda-pattern.cpp  lambda-pattern.h  lines-pattern.cpp  lines-pattern.h  mirror-pattern.cpp  mirror-pattern.h  pattern-logic-operations.cpp  pattern-logic-operations.h  pattern-tessellation.cpp  pattern-tessellation.h  pattern-tiling.cpp  pattern-tiling.h  pattern-transformations.cpp  pattern-transformations.h  pattern.h  patterns.h  polar-pattern.cpp  polar-pattern.h  polka-dots-pattern.cpp  polka-dots-pattern.h  revolution-pattern.cpp  revolution-pattern.h  spiral-pattern.cpp  spiral-pattern.h  split-pattern.cpp  split-pattern.h
raytracer/raytracer/performance/: performance.cpp  performance.h
raytracer/raytracer/pipeline/: animation-processor.cpp  animation-processor.h  base64-processor.cpp  bmp-consumer.cpp  bmp-consumer.h  consumer.h  inverter-processor.cpp  inverter-processor.h  (+18 more)
(+573 files in other folders)
